typescript/checker/tests/conformance/ambient/ambientShorthand.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            173,
        ),
        hi: BytePos(
            205,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/ambient",
    src: Atom('jquery' type=inline),
}
 --> $DIR/tests/conformance/ambient/ambientShorthand.ts:8:1
  |
8 | import foo, {bar} from "jquery";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

